Lib/include/zenoh_commons.h


typedef enum zc_log_severity_t {
  ZC_LOG_SEVERITY_TRACE = 0,
  ZC_LOG_SEVERITY_DEBUG = 1,
  ZC_LOG_SEVERITY_INFO = 2,
  ZC_LOG_SEVERITY_WARN = 3,
  ZC_LOG_SEVERITY_ERROR = 4,
} zc_log_severity_t;
typedef struct z_buf_alloc_result_t {
  enum zc_buf_alloc_status_t status;
  z_owned_shm_mut_t buf;
  enum z_alloc_error_t error;
} z_buf_alloc_result_t;
typedef int8_t z_result_t;
typedef struct z_alloc_alignment_t {
  uint8_t pow;
} z_alloc_alignment_t;
typedef struct zc_threadsafe_context_t {
  struct zc_threadsafe_context_data_t context;
  void (*delete_fn)(void*);
} zc_threadsafe_context_t;
typedef struct z_owned_closure_hello_t {
  void *_context;
  void (*_call)(struct z_loaned_hello_t *hello, void *context);
  void (*_drop)(void *context);
} z_owned_closure_hello_t;
typedef struct z_owned_closure_query_t {
  void *_context;
  void (*_call)(struct z_loaned_query_t *reply, void *context);
  void (*_drop)(void *context);
} z_owned_closure_query_t;
typedef struct z_owned_closure_reply_t {
  void *_context;
  void (*_call)(struct z_loaned_reply_t *reply, void *context);
  void (*_drop)(void *context);
} z_owned_closure_reply_t;
typedef struct z_owned_closure_sample_t {
  void *_context;
  void (*_call)(struct z_loaned_sample_t *sample, void *context);
  void (*_drop)(void *context);
} z_owned_closure_sample_t;
typedef struct z_owned_closure_zid_t {
  void *_context;
  void (*_call)(const z_id_t *z_id, void *context);
  void (*_drop)(void *context);
} z_owned_closure_zid_t;
typedef struct z_buf_layout_alloc_result_t {
  enum zc_buf_layout_alloc_status_t status;
  z_owned_shm_mut_t buf;
  enum z_alloc_error_t alloc_error;
  enum z_layout_error_t layout_error;
} z_buf_layout_alloc_result_t;
typedef struct z_task_attr_t {
  size_t _0;
} z_task_attr_t;
typedef struct zc_owned_closure_log_t {
  void *_context;
  void (*_call)(enum zc_log_severity_t severity, const struct z_loaned_string_t *msg, void *context);
  void (*_drop)(void *context);
} zc_owned_closure_log_t;
typedef struct zc_matching_status_t {
  bool matching;
} zc_matching_status_t;
typedef struct zc_owned_closure_matching_status_t {
  void *_context;
  void (*_call)(const struct zc_matching_status_t *matching_status, void *context);
  void (*_drop)(void *context);
} zc_owned_closure_matching_status_t;
ZENOHC_API
z_result_t z_alloc_layout_threadsafe_alloc_gc_defrag_async(struct z_buf_alloc_result_t *out_result,
                                                           const z_loaned_alloc_layout_t *layout,
                                                           struct zc_threadsafe_context_t result_context,
                                                           void (*result_callback)(void*,
                                                                                   struct z_buf_alloc_result_t*));
ZENOHC_API
z_result_t z_bytes_from_buf(struct z_owned_bytes_t *this_,
                            uint8_t *data,
                            size_t len,
                            void (*deleter)(void *data, void *context),
                            void *context);
ZENOHC_API
z_result_t z_bytes_from_str(struct z_owned_bytes_t *this_,
                            char *str,
                            void (*deleter)(void *data, void *context),
                            void *context);
ZENOHC_API
void z_closure_hello(struct z_owned_closure_hello_t *this_,
                     void (*call)(struct z_loaned_hello_t *hello, void *context),
                     void (*drop)(void *context),
                     void *context);
ZENOHC_API
void z_closure_query(struct z_owned_closure_query_t *this_,
                     void (*call)(struct z_loaned_query_t *query, void *context),
                     void (*drop)(void *context),
                     void *context);
ZENOHC_API
void z_closure_reply(struct z_owned_closure_reply_t *this_,
                     void (*call)(struct z_loaned_reply_t *reply, void *context),
                     void (*drop)(void *context),
                     void *context);
ZENOHC_API
void z_closure_sample(struct z_owned_closure_sample_t *this_,
                      void (*call)(struct z_loaned_sample_t *sample, void *context),
                      void (*drop)(void *context),
                      void *context);
ZENOHC_API
void z_closure_zid(struct z_owned_closure_zid_t *this_,
                   void (*call)(const z_id_t *z_id, void *context),
                   void (*drop)(void *context),
                   void *context);
ZENOHC_API const struct z_loaned_encoding_t *z_encoding_application_coap_payload(void);
ZENOHC_API
const struct z_loaned_encoding_t *z_encoding_application_json_patch_json(void);
ZENOHC_API const struct z_loaned_encoding_t *z_encoding_application_json_seq(void);
ZENOHC_API
const struct z_loaned_encoding_t *z_encoding_application_jsonpath(void);
ZENOHC_API const struct z_loaned_encoding_t *z_encoding_application_jwt(void);
ZENOHC_API const struct z_loaned_encoding_t *z_encoding_application_mp4(void);
ZENOHC_API const struct z_loaned_encoding_t *z_encoding_application_soap_xml(void);
ZENOHC_API const struct z_loaned_encoding_t *z_encoding_application_sql(void);
ZENOHC_API const struct z_loaned_encoding_t *z_encoding_application_yang(void);
ZENOHC_API const struct z_loaned_encoding_t *z_encoding_audio_aac(void);
ZENOHC_API const struct z_loaned_encoding_t *z_encoding_audio_flac(void);
ZENOHC_API
const struct z_loaned_encoding_t *z_encoding_audio_mp4(void);
ZENOHC_API const struct z_loaned_encoding_t *z_encoding_audio_ogg(void);
ZENOHC_API const struct z_loaned_encoding_t *z_encoding_audio_vorbis(void);
ZENOHC_API const struct z_loaned_encoding_t *z_encoding_text_csv(void);
ZENOHC_API const struct z_loaned_encoding_t *z_encoding_text_javascript(void);
ZENOHC_API const struct z_loaned_encoding_t *z_encoding_text_markdown(void);
ZENOHC_API const struct z_loaned_encoding_t *z_encoding_video_h261(void);
ZENOHC_API const struct z_loaned_encoding_t *z_encoding_video_h263(void);
ZENOHC_API const struct z_loaned_encoding_t *z_encoding_video_h264(void);
ZENOHC_API const struct z_loaned_encoding_t *z_encoding_video_h265(void);
ZENOHC_API const struct z_loaned_encoding_t *z_encoding_video_h266(void);
ZENOHC_API const struct z_loaned_encoding_t *z_encoding_video_mp4(void);
ZENOHC_API const struct z_loaned_encoding_t *z_encoding_video_ogg(void);
ZENOHC_API const struct z_loaned_encoding_t *z_encoding_video_raw(void);
ZENOHC_API const struct z_loaned_encoding_t *z_encoding_video_vp8(void);
ZENOHC_API const struct z_loaned_encoding_t *z_encoding_video_vp9(void);
ZENOHC_API bool z_internal_reply_err_check(const struct z_owned_reply_err_t *this_);
ZENOHC_API void z_internal_reply_err_null(struct z_owned_reply_err_t *this_);
ZENOHC_API
const struct z_loaned_bytes_t *z_reply_err_payload(const struct z_loaned_reply_err_t *this_);
ZENOHC_API
z_result_t z_shm_provider_alloc_gc_defrag_async(struct z_buf_layout_alloc_result_t *out_result,
                                                const z_loaned_shm_provider_t *provider,
                                                size_t size,
                                                struct z_alloc_alignment_t alignment,
                                                struct zc_threadsafe_context_t result_context,
                                                void (*result_callback)(void*,
                                                                        struct z_buf_layout_alloc_result_t*));
ZENOHC_API
z_result_t z_slice_from_buf(struct z_owned_slice_t *this_,
                            uint8_t *data,
                            size_t len,
                            void (*drop)(void *data, void *context),
                            void *context);
ZENOHC_API
z_result_t z_string_from_str(struct z_owned_string_t *this_,
                             char *str,
                             void (*drop)(void *value, void *context),
                             void *context);
ZENOHC_API
z_result_t z_task_init(struct z_owned_task_t *this_,
                       const struct z_task_attr_t *_attr,
                       void (*fun)(void *arg),
                       void *arg);
ZENOHC_API
void zc_closure_log(struct zc_owned_closure_log_t *this_,
                    void (*call)(enum zc_log_severity_t severity,
                                 const struct z_loaned_string_t *msg,
                                 void *context),
                    void (*drop)(void *context),
                    void *context);
ZENOHC_API
void zc_closure_matching_status(struct zc_owned_closure_matching_status_t *this_,
                                void (*call)(const struct zc_matching_status_t *matching_status,
                                             void *context),
                                void (*drop)(void *context),
                                void *context);