examples/ZenohCS/NativeMethods.cs


        /// <summary>
        ///  A JavaScript file.
        ///
        ///  Constant alias for string: `"text/javascript"`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_encoding_text_javascript", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_loaned_encoding_t* z_encoding_text_javascript();

        /// <summary>
        ///  A MarkDown file.
        ///
        ///  Constant alias for string: `"text/markdown"`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_encoding_text_markdown", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_loaned_encoding_t* z_encoding_text_markdown();

        /// <summary>
        ///  A CSV file.
        ///
        ///  Constant alias for string: `"text/csv"`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_encoding_text_csv", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_loaned_encoding_t* z_encoding_text_csv();

        /// <summary>
        ///  An application-specific SQL query.
        ///
        ///  Constant alias for string: `"application/sql"`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_encoding_application_sql", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_loaned_encoding_t* z_encoding_application_sql();

        /// <summary>
        ///  Constrained Application Protocol (CoAP) data intended for CoAP-to-HTTP and HTTP-to-CoAP proxies.
        ///
        ///  Constant alias for string: `"application/coap-payload"`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_encoding_application_coap_payload", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_loaned_encoding_t* z_encoding_application_coap_payload();

        /// <summary>
        ///  Defines a JSON document structure for expressing a sequence of operations to apply to a JSON document.
        ///
        ///  Constant alias for string: `"application/json-patch+json"`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_encoding_application_json_patch_json", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_loaned_encoding_t* z_encoding_application_json_patch_json();

        /// <summary>
        ///  A JSON text sequence consists of any number of JSON texts, all encoded in UTF-8.
        ///
        ///  Constant alias for string: `"application/json-seq"`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_encoding_application_json_seq", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_loaned_encoding_t* z_encoding_application_json_seq();

        /// <summary>
        ///  A JSONPath defines a string syntax for selecting and extracting JSON values from within a given JSON value.
        ///
        ///  Constant alias for string: `"application/jsonpath"`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_encoding_application_jsonpath", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_loaned_encoding_t* z_encoding_application_jsonpath();

        /// <summary>
        ///  A JSON Web Token (JWT).
        ///
        ///  Constant alias for string: `"application/jwt"`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_encoding_application_jwt", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_loaned_encoding_t* z_encoding_application_jwt();

        /// <summary>
        ///  An application-specific MPEG-4 encoded data, either audio or video.
        ///
        ///  Constant alias for string: `"application/mp4"`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_encoding_application_mp4", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_loaned_encoding_t* z_encoding_application_mp4();

        /// <summary>
        ///  A SOAP 1.2 message serialized as XML 1.0.
        ///
        ///  Constant alias for string: `"application/soap+xml"`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_encoding_application_soap_xml", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_loaned_encoding_t* z_encoding_application_soap_xml();

        /// <summary>
        ///  A YANG-encoded data commonly used by the Network Configuration Protocol (NETCONF).
        ///
        ///  Constant alias for string: `"application/yang"`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_encoding_application_yang", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_loaned_encoding_t* z_encoding_application_yang();

        /// <summary>
        ///  A MPEG-4 Advanced Audio Coding (AAC) media.
        ///
        ///  Constant alias for string: `"audio/aac"`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_encoding_audio_aac", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_loaned_encoding_t* z_encoding_audio_aac();

        /// <summary>
        ///  A Free Lossless Audio Codec (FLAC) media.
        ///
        ///  Constant alias for string: `"audio/flac"`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_encoding_audio_flac", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_loaned_encoding_t* z_encoding_audio_flac();

        /// <summary>
        ///  An audio codec defined in MPEG-1, MPEG-2, MPEG-4, or registered at the MP4 registration authority.
        ///
        ///  Constant alias for string: `"audio/mp4"`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_encoding_audio_mp4", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_loaned_encoding_t* z_encoding_audio_mp4();

        /// <summary>
        ///  An Ogg-encapsulated audio stream.
        ///
        ///  Constant alias for string: `"audio/ogg"`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_encoding_audio_ogg", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_loaned_encoding_t* z_encoding_audio_ogg();

        /// <summary>
        ///  A Vorbis-encoded audio stream.
        ///
        ///  Constant alias for string: `"audio/vorbis"`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_encoding_audio_vorbis", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_loaned_encoding_t* z_encoding_audio_vorbis();

        /// <summary>
        ///  A h261-encoded video stream.
        ///
        ///  Constant alias for string: `"video/h261"`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_encoding_video_h261", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_loaned_encoding_t* z_encoding_video_h261();

        /// <summary>
        ///  A h263-encoded video stream.
        ///
        ///  Constant alias for string: `"video/h263"`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_encoding_video_h263", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_loaned_encoding_t* z_encoding_video_h263();

        /// <summary>
        ///  A h264-encoded video stream.
        ///
        ///  Constant alias for string: `"video/h264"`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_encoding_video_h264", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_loaned_encoding_t* z_encoding_video_h264();

        /// <summary>
        ///  A h265-encoded video stream.
        ///
        ///  Constant alias for string: `"video/h265"`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_encoding_video_h265", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_loaned_encoding_t* z_encoding_video_h265();

        /// <summary>
        ///  A h266-encoded video stream.
        ///
        ///  Constant alias for string: `"video/h266"`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_encoding_video_h266", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_loaned_encoding_t* z_encoding_video_h266();

        /// <summary>
        ///  A video codec defined in MPEG-1, MPEG-2, MPEG-4, or registered at the MP4 registration authority.
        ///
        ///  Constant alias for string: `"video/mp4"`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_encoding_video_mp4", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_loaned_encoding_t* z_encoding_video_mp4();

        /// <summary>
        ///  An Ogg-encapsulated video stream.
        ///
        ///  Constant alias for string: `"video/ogg"`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_encoding_video_ogg", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_loaned_encoding_t* z_encoding_video_ogg();

        /// <summary>
        ///  An uncompressed, studio-quality video stream.
        ///
        ///  Constant alias for string: `"video/raw"`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_encoding_video_raw", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_loaned_encoding_t* z_encoding_video_raw();

        /// <summary>
        ///  A VP8-encoded video stream.
        ///
        ///  Constant alias for string: `"video/vp8"`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_encoding_video_vp8", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_loaned_encoding_t* z_encoding_video_vp8();

        /// <summary>
        ///  A VP9-encoded video stream.
        ///
        ///  Constant alias for string: `"video/vp9"`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_encoding_video_vp9", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_loaned_encoding_t* z_encoding_video_vp9();

        /// <summary>
        ///  Constructs an empty `z_owned_reply_err_t`.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_internal_reply_err_null", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern void z_internal_reply_err_null(MaybeUninit* this_);

        /// <summary>
        ///  Returns ``true`` if reply error is in non-default state, ``false`` otherwise.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_internal_reply_err_check", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool z_internal_reply_err_check(z_owned_reply_err_t* this_);

        /// <summary>
        ///  Returns reply error payload.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "z_reply_err_payload", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        public static extern z_loaned_bytes_t* z_reply_err_payload(z_loaned_reply_err_t* this_);
